# yolov5seg_hailo

yoloseg/core/hailo/libs/postprocesses/detection/: yolo_output.cpp  yolo_output.hpp  yolo_postprocess.cpp
yoloseg/core/hailo/libs/postprocesses/instance_segmentation/: yolov5seg.cpp
yoloseg/instance_seg/: README.rst  build.sh  meson.build  meson_options.txt  seg_app.cpp  seg_app.hpp  yolov5n_seg.hef
yoloseg/instance_seg/output_images/: image0_detections.txt  image10_detections.txt  image1_detections.txt  image2_detections.txt  image3_detections.txt  image4_detections.txt  image5_detections.txt  image6_detections.txt  image7_detections.txt  image8_detections.txt  image9_detections.txt
